// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`EuiSelectableTemplateSitewide is rendered 1`] = `
<div
  class="euiSelectable euiSelectableTemplateSitewide testClass1 testClass2"
  data-test-subj="test subject string"
>
  <div
    class="euiPopover euiPopover--anchorDownCenter css-1k1aqtq-EuiPopover"
  >
    <div
      class="euiPopover__anchor css-1k1aqtq-EuiPopover"
    >
      <div
        class="euiFormControlLayout euiFormControlLayout--fullWidth"
      >
        <div
          class="euiFormControlLayout__childrenWrapper"
        >
          <input
            aria-activedescendant=""
            aria-haspopup="listbox"
            aria-label="aria-label"
            autocomplete="off"
            class="euiFieldSearch euiFieldSearch--fullWidth euiSelectableSearch euiSelectableTemplateSitewide__search"
            placeholder="Search for anything..."
            type="search"
            value=""
          />
          <div
            class="euiFormControlLayoutIcons"
          >
            <span
              class="euiFormControlLayoutCustomIcon"
            >
              <span
                aria-hidden="true"
                class="euiFormControlLayoutCustomIcon__icon"
                data-euiicon-type="search"
              />
            </span>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`EuiSelectableTemplateSitewide props popoverButton is not rendered with popoverButtonBreakpoints xs 1`] = `
<div
  class="euiSelectable euiSelectableTemplateSitewide"
>
  <div
    class="euiPopover euiPopover--anchorDownCenter css-1k1aqtq-EuiPopover"
  >
    <div
      class="euiPopover__anchor css-1k1aqtq-EuiPopover"
    >
      <div
        class="euiFormControlLayout euiFormControlLayout--fullWidth"
      >
        <div
          class="euiFormControlLayout__childrenWrapper"
        >
          <input
            aria-activedescendant=""
            aria-haspopup="listbox"
            aria-label="Filter options"
            autocomplete="off"
            class="euiFieldSearch euiFieldSearch--fullWidth euiSelectableSearch euiSelectableTemplateSitewide__search"
            placeholder="Search for anything..."
            type="search"
            value=""
          />
          <div
            class="euiFormControlLayoutIcons"
          >
            <span
              class="euiFormControlLayoutCustomIcon"
            >
              <span
                aria-hidden="true"
                class="euiFormControlLayoutCustomIcon__icon"
                data-euiicon-type="search"
              />
            </span>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`EuiSelectableTemplateSitewide props popoverButton is rendered 1`] = `
<div
  class="euiSelectable euiSelectableTemplateSitewide"
>
  <div
    class="euiPopover euiPopover--anchorDownCenter css-17g0ovn-EuiPopover"
  >
    <div
      class="euiPopover__anchor css-17g0ovn-EuiPopover"
    >
      <button>
        Button
      </button>
    </div>
  </div>
</div>
`;

exports[`EuiSelectableTemplateSitewide props popoverButton is rendered with popoverButtonBreakpoints m 1`] = `
<div
  class="euiSelectable euiSelectableTemplateSitewide"
>
  <div
    class="euiPopover euiPopover--anchorDownCenter css-17g0ovn-EuiPopover"
  >
    <div
      class="euiPopover__anchor css-17g0ovn-EuiPopover"
    >
      <button>
        Button
      </button>
    </div>
  </div>
</div>
`;

exports[`EuiSelectableTemplateSitewide props popoverFooter is rendered 1`] = `
<div
  class="euiSelectable euiSelectableTemplateSitewide"
>
  <div
    class="euiPopover euiPopover--anchorDownCenter css-1k1aqtq-EuiPopover"
  >
    <div
      class="euiPopover__anchor css-1k1aqtq-EuiPopover"
    >
      <div
        class="euiFormControlLayout euiFormControlLayout--fullWidth"
      >
        <div
          class="euiFormControlLayout__childrenWrapper"
        >
          <input
            aria-activedescendant=""
            aria-haspopup="listbox"
            aria-label="Filter options"
            autocomplete="off"
            class="euiFieldSearch euiFieldSearch--fullWidth euiSelectableSearch euiSelectableTemplateSitewide__search"
            placeholder="Search for anything..."
            type="search"
            value=""
          />
          <div
            class="euiFormControlLayoutIcons"
          >
            <span
              class="euiFormControlLayoutCustomIcon"
            >
              <span
                aria-hidden="true"
                class="euiFormControlLayoutCustomIcon__icon"
                data-euiicon-type="search"
              />
            </span>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`EuiSelectableTemplateSitewide props popoverProps is rendered 1`] = `
<div
  class="euiSelectable euiSelectableTemplateSitewide"
>
  <div
    class="euiPopover euiPopover--anchorDownCenter customPopoverClass css-1k1aqtq-EuiPopover"
  >
    <div
      class="euiPopover__anchor css-1k1aqtq-EuiPopover"
    >
      <div
        class="euiFormControlLayout euiFormControlLayout--fullWidth"
      >
        <div
          class="euiFormControlLayout__childrenWrapper"
        >
          <input
            aria-activedescendant=""
            aria-haspopup="listbox"
            aria-label="Filter options"
            autocomplete="off"
            class="euiFieldSearch euiFieldSearch--fullWidth euiSelectableSearch euiSelectableTemplateSitewide__search"
            placeholder="Search for anything..."
            type="search"
            value=""
          />
          <div
            class="euiFormControlLayoutIcons"
          >
            <span
              class="euiFormControlLayoutCustomIcon"
            >
              <span
                aria-hidden="true"
                class="euiFormControlLayoutCustomIcon__icon"
                data-euiicon-type="search"
              />
            </span>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`EuiSelectableTemplateSitewide props popoverTitle is rendered 1`] = `
<div
  class="euiSelectable euiSelectableTemplateSitewide"
>
  <div
    class="euiPopover euiPopover--anchorDownCenter css-1k1aqtq-EuiPopover"
  >
    <div
      class="euiPopover__anchor css-1k1aqtq-EuiPopover"
    >
      <div
        class="euiFormControlLayout euiFormControlLayout--fullWidth"
      >
        <div
          class="euiFormControlLayout__childrenWrapper"
        >
          <input
            aria-activedescendant=""
            aria-haspopup="listbox"
            aria-label="Filter options"
            autocomplete="off"
            class="euiFieldSearch euiFieldSearch--fullWidth euiSelectableSearch euiSelectableTemplateSitewide__search"
            placeholder="Search for anything..."
            type="search"
            value=""
          />
          <div
            class="euiFormControlLayoutIcons"
          >
            <span
              class="euiFormControlLayoutCustomIcon"
            >
              <span
                aria-hidden="true"
                class="euiFormControlLayoutCustomIcon__icon"
                data-euiicon-type="search"
              />
            </span>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;
